Wrapper container added for overflow bugs

--- a/static/styles/clearSky.css
+++ b/static/styles/clearSky.css
@@ -4,6 +4,14 @@ body{
     margin: 0;
 }
 
+.wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    overflow: hidden; 
+}
+
 .cloud1,.cloud2,.cloud3{
     position: absolute;
     z-index: -1;
