--- a/static/styles/clouds.css
+++ b/static/styles/clouds.css
@@ -7,6 +7,14 @@ body{
     animation: mymove 3s forwards;
 }
 
+.wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    overflow: hidden; 
+}
+
 .cloud4,.cloud5,.cloud2,.cloud1{
     position: absolute;
     z-index: -1;
