--- a/static/styles/resultsPage.css
+++ b/static/styles/resultsPage.css
@@ -10,6 +10,14 @@ body{
     clip: auto;
 }
 
+.wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    overflow: hidden; 
+}
+
 .city-name-section{
     background-color: rgba(37, 37, 37, 0.33);
     color: whitesmoke;
@@ -38,7 +46,7 @@ body{
 
     min-width: fit-content;
     max-width: 50%;
-    background-color: rgba(245, 245, 245, 0.764);
+    background-color: whitesmoke;
 
     padding: 2rem;
     border-radius: 10px;
